--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hello HTML</title>
 </head>
+    <header>
+        <h1> Hello World</h1>
+    </header>
 <body>
     
 </body>
